--- a/Views/ModifyItem.xaml
+++ b/Views/ModifyItem.xaml
@@ -2,11 +2,137 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.ModifyItem"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:Converters="clr-namespace:IMP_reseni.Converters"
              Title="ModifyItem">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ContentPage.Resources>
+        <Converters:IntToBoolConverter x:Key="intToBool" />
+        <toolkit:VariableMultiValueConverter 
+                x:Key="VariableMultiValueConverter"
+                ConditionType="Exact"
+                Count="7" />
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="32" />
+            <Setter Property="BorderWidth" Value="1" />
+            <Setter Property="BorderColor" Value="Black" />
+            <Setter Property="Margin" Value="0,0,0,0"/>
+            <Setter Property="CornerRadius"  Value="0"/>
+        </Style>
+
+
+        <Style TargetType="Entry">
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="HorizontalOptions" Value="Center"/>
+            <Setter Property="FontSize" Value="Medium"/>
+        </Style>
+
+    </ContentPage.Resources>
+    <StackLayout Margin="25">
+        <Border StyleClass="PickerBorder">
+            <Picker Title="Zadejte Kategorii"
+                x:Name="CategoryPicker"
+                ItemsSource="{Binding ListOfCategory}"
+                SelectedItem="{Binding SelectedCategory}"
+                HorizontalTextAlignment="Center"
+                FontSize="Large"
+                TitleColor="Black"
+                />
+        </Border>
+        <Border StyleClass="PickerBorder">
+            <Picker Title="Zvol Pokategorii"
+                x:Name="SubCategoryPicker"
+                ItemsSource="{Binding ListOfSubCategory}"
+                SelectedItem="{Binding SelectedSubCategory}"
+                HorizontalTextAlignment="Center"
+                FontSize="Large"
+                TitleColor="Black"
+                />
+        </Border>
+
+
+        <Border StyleClass="PickerBorder">
+            <Picker Title="Zvol Položku"
+                x:Name="ItemPicker"
+                ItemsSource="{Binding ListOfItem}"
+                SelectedItem="{Binding SelectedItem}"
+                HorizontalTextAlignment="Center"
+                FontSize="Large"
+                TitleColor="Black"
+                />
+        </Border>
+
+        <Border StyleClass="PickerBorder">
+            <Picker Title="Zvol Dodavatele"
+                x:Name="SupplierPicker"
+                ItemsSource="{Binding ListOfSupplier}"
+                SelectedItem="{Binding SelectedSupplier}"
+                HorizontalTextAlignment="Center"
+                FontSize="Large"
+                TitleColor="Black"
+                />
+        </Border>
+
+        <Border StyleClass="EntryBorder"
+                StrokeShape="RoundRectangle 40,40,40,40"
+                >
+            <Entry Placeholder="Zadejte název"
+               Keyboard="Default"
+               x:Name="Entry"
+               Text="{Binding Text}"/>
+        </Border>
+
+        <Border StyleClass="EntryBorder">
+            <Entry Placeholder="Zadejte počet"
+               x:Name="EntryCount"
+               Keyboard="Numeric"
+               Text="{Binding Count}"/>
+        </Border>
+
+
+        <Border StyleClass="EntryBorder">
+            <Entry Placeholder="Zadejte nákupní cenu (nepovinné)"
+               x:Name="EntryBuyPrice"
+               Keyboard="Numeric"
+               Text="{Binding BuyPrice}"/>
+        </Border>
+
+        <Border StyleClass="EntryBorder">
+            <Entry Placeholder="Zadejte Prodejní cenu"
+               x:Name="EntrySellPrice"
+               Keyboard="Numeric"
+               Text="{Binding SellPrice}"/>
+        </Border>
+        <HorizontalStackLayout HorizontalOptions="Center">
+            <CheckBox IsChecked="{Binding SorChecked}"/>
+            <Label Text="Komisní prodej" 
+               FontSize="Large"
+               LineBreakMode="WordWrap"
+               />
+        </HorizontalStackLayout>
+        <HorizontalStackLayout HorizontalOptions="Center">
+            <CheckBox IsChecked="{Binding DisableCheck}"/>
+            <Label Text="Skryté" 
+               FontSize="Large"
+               LineBreakMode="WordWrap"/>
+        </HorizontalStackLayout>
+        <Button Text="Vytvořit"
+                HorizontalOptions="Center"
+                Margin="0,20,0,0"
+                Command="{Binding ModifyCommand}"
+                CommandParameter="{Binding Source={x:Reference Entry},
+                                            Path=Text}">
+            <Button.IsEnabled>
+                <MultiBinding Converter="{StaticResource VariableMultiValueConverter}">
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference SupplierPicker}" Path="SelectedItem.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference EntryCount}" Path="Text.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference EntrySellPrice}" Path="Text.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference Entry}" Path="Text.Length" />
+
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference ItemPicker}" Path="SelectedItem.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference SubCategoryPicker}" Path="SelectedItem.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference CategoryPicker}" Path="SelectedItem.Length" />
+                </MultiBinding>
+            </Button.IsEnabled>
+        </Button>
+    </StackLayout>
 </ContentPage>
