--- a/Views/AdminPanel.xaml
+++ b/Views/AdminPanel.xaml
@@ -22,14 +22,16 @@
              Direction="Column"
                 AlignItems="Stretch"
                 JustifyContent="SpaceEvenly">
+            <Button Text="Naskladnit"
+                    Command="{Binding NavigateCommand}"
+                    CommandParameter="{x:Type Views:StockUp}"/>
             <Button Text="Vytvořit"
                     Command="{Binding NavigateCommand}"
                     CommandParameter="{x:Type Views:Create}"/>
             
             <Button Text="Upravit"
                     Command="{Binding NavigateCommand}"
-                    CommandParameter="{x:Type Views:Modify}"
-                    />
+                    CommandParameter="{x:Type Views:Modify}"/>
             
             <Button Text="Učetnictví"
                     Command="{Binding NavigateCommand}"
@@ -37,10 +39,10 @@
             
             <Button Text="CLoud"
                     Command="{Binding NavigateCommand}"
-                    CommandParameter="{x:Type Views:Cloud}" />
+                    CommandParameter="{x:Type Views:Cloud}"/>
             <Button Text="Test"
                     Command="{Binding NavigateCommand}"
-                    CommandParameter="{x:Type Views:Basket}" />
+                    CommandParameter="{x:Type Views:Basket}"/>
         </FlexLayout>
     </Border>
 
