--- a/Views/Basket.xaml
+++ b/Views/Basket.xaml
@@ -2,9 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.Basket"
+             xmlns:ViewModels="clr-namespace:IMP_reseni.ViewModels"
              Title="Basket">
-
-
     <VerticalStackLayout>
         <CollectionView ItemsSource="{Binding BasketItems}">
             <CollectionView.ItemTemplate>
@@ -16,20 +15,41 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Image Source="{Binding ImageUrl, TargetNullValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}"
+                        <Image Source="{Binding ImageUrl, FallbackValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}"
                                Grid.Column="0"
                                Aspect="AspectFill"
                                HeightRequest="60"
                                WidthRequest="60"/>
                         
                         <Label Grid.Column="1"
-                               Text="{Binding Name}"
+                               Text="{Binding Path=Item.Name}"
+                               FontSize="Large"
+                               VerticalTextAlignment="Center"
                                FontAttributes="Bold" />
-                        
+
                         <Label Grid.Column="2"
-                               Text="{Binding CountAndPrice}"/>
+                               FontSize="Large"
+                               VerticalTextAlignment="Center"
+                               HorizontalTextAlignment="End">
+                            <Label.Text>
+                                <MultiBinding StringFormat="{}{0}x{1}">
+                                    <Binding Path="Amount"/>
+                                    <Binding Path="SellCostPerPiece"/>
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+
+                        <ImageButton
+                               Source="cross.svg"
+                               Grid.Column="3"
+                               HeightRequest="50" 
+                               WidthRequest="50"
+                               Command="{Binding Source={RelativeSource AncestorType={x:Type ViewModels:BasketViewModel}}, Path=DeleteCommand}"
+                               CommandParameter="{Binding .}"
+                               />
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
