--- a/Views/StockUp.xaml
+++ b/Views/StockUp.xaml
@@ -18,42 +18,61 @@
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <CollectionView 
+    <VerticalStackLayout>
+        <HorizontalStackLayout>
+            <ImageButton
+                    HorizontalOptions="Start"
+                    VerticalOptions="Start"
+                    Source="arrow_back.svg"
+                    HeightRequest="50" WidthRequest="50"
+                    Margin="25,0,0,0"
+                    Command="{Binding NavigateCollectionCommand}"
+                    CommandParameter="Back"/>
+
+            <Label
+                    VerticalOptions="Center"
+                    HorizontalTextAlignment="Center"
+                    TextColor="{DynamicResource  Key=Primary}"
+                    FontSize="Title"
+                    FontAttributes="Bold"
+                    Text="{Binding TypeOfItems}"                  
+                    />
+        </HorizontalStackLayout>
+        <CollectionView 
                         x:Name="MyCollectionView"
                         ItemsSource="{Binding ItemsList}" 
                         SelectionMode="Single"
                         SelectedItem="{Binding SelectedItem}"
                         SelectionChangedCommand="{Binding ItemSelect}"
                         SelectionChangedCommandParameter="{Binding SelectedItem, Source={x:Reference MyCollectionView}}"
-                        ItemsLayout="VerticalGrid, 3"
-                        Grid.Row="1"
-                        Grid.ColumnSpan="3">
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <Grid Padding="10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Image Grid.Row="0"
+                        ItemsLayout="VerticalGrid, 3">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Row="0"
                                    Source="{Binding ImageUrl, TargetNullValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}" 
                                    Aspect="AspectFill" />
 
-                    <Label Grid.Row="1"
+                        <Label Grid.Row="1"
                                    Text="{Binding Name}" 
                                    HorizontalTextAlignment="Center"
                                    FontSize="Medium"/>
-                </Grid>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-        <CollectionView.Behaviors>
-            <toolkit:EventToCommandBehavior
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+            <CollectionView.Behaviors>
+                <toolkit:EventToCommandBehavior
                              x:TypeArguments="SelectionChangedEventArgs"
                              EventName="SelectionChanged"
                              Command="{Binding ItemSelectedCommand}"/>
-        </CollectionView.Behaviors>
-    </CollectionView>
+            </CollectionView.Behaviors>
+        </CollectionView>
+    </VerticalStackLayout>
 </ContentPage>
