--- a/Views/Cloud.xaml
+++ b/Views/Cloud.xaml
@@ -2,21 +2,53 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.Cloud"
-             Title="Cloud">
+             Title="Nastavení Cloud">
     <ContentPage.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="32" />
             <Setter Property="FontSize" Value="Title" />
             <Setter Property="TextColor" Value="Black"/>
             <Setter Property="BackgroundColor" Value="#FFA500"/>
+            <Setter Property="Margin" Value="50,10"/>
         </Style>
+        <Style TargetType="Entry">
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="HorizontalOptions" Value="Center"/>
+            <Setter Property="FontSize" Value="Medium"/>
+            <Setter Property="Margin" Value="10,0"/>
+        </Style>
+
+        <Style TargetType="FlexLayout">
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Margin" Value="0,0,15,0"/>
+            <Setter Property="Direction" Value="Row"/>
+            <Setter Property="AlignItems" Value="Center"/>
+            <Setter Property="JustifyContent" Value="SpaceBetween"/>
+        </Style>
+
     </ContentPage.Resources>
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Button Text="Klikni"
-                Command="{Binding TestCommand}"/>
+    <VerticalStackLayout Padding="10">
+        <Label Text="Zadej přihlašovací údaje od účtu MEGA"/>
+        <Border class="Entry" VerticalOptions="Start">
+                <Entry Placeholder="Email"/>
+        </Border>
+        <Border class="Entry" VerticalOptions="Start">
+            <Entry Placeholder="Heslo" 
+                   IsPassword="True" 
+                   FontAttributes="Bold"
+                   FontFamily="OpenSansSemibold"/>
+        </Border>
+        <Button Text="Potvrdit"/>
+
+        <FlexLayout >
+            <Label Text="Zapnout cloud" 
+                   VerticalOptions="Center"
+                   HorizontalOptions="Start"/>
+            <Switch VerticalOptions="Center"
+                    HorizontalOptions="End"/>
+        </FlexLayout>
+        
+        <!--<Button Text="Klikni"
+                Command="{Binding TestCommand}"/>-->
     </VerticalStackLayout>
 </ContentPage>
