--- a/Views/NewSubCategory.xaml
+++ b/Views/NewSubCategory.xaml
@@ -50,6 +50,11 @@
         />
         </Border>
 
+        <Button Text="{Binding UploadButtonText}"       
+                HorizontalOptions="Center"
+                Margin="0,0,0,60"
+                Command="{Binding UploadOPictureCommand}"/>
+
 
         <Button Text="Vytvořit Kategorii"
                 HorizontalOptions="Center"
