--- a/Views/ItemStockUp.xaml
+++ b/Views/ItemStockUp.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.ItemStockUp"
-             Title="ItemStockUp"
+             Title="Naskladnit/Odskladnit položku"
              >
     <ContentPage.Resources>
         <ResourceDictionary>
