--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -165,7 +165,7 @@
         </Border>-->
         <Border 
         StrokeShape="RoundRectangle 40,40,0,0"
-        Background="{AppThemeBinding Light=#D9D9D9, Dark={StaticResource Gray900}}"
+        BackgroundColor="{AppThemeBinding Light=#D9D9D9, Dark={x:StaticResource Gray900}}"
         Margin="0,50,0,0"
         Grid.Row="3">
             <Grid>
