--- a/Views/StockUp.xaml
+++ b/Views/StockUp.xaml
@@ -5,7 +5,7 @@
               xmlns:ViewModels="clr-namespace:IMP_reseni.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:Converters="clr-namespace:IMP_reseni.Converters"
-             Title="StockUp">
+             Title="Naskladnit/Odskladnit">
     <ContentPage.Resources>
         <ResourceDictionary>
             <toolkit:SelectedItemEventArgsConverter x:Key="SelectedItemEventArgsConverter" />
