--- a/Controls/SpinnerPopup.xaml
+++ b/Controls/SpinnerPopup.xaml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<toolkit:Popup
-    CanBeDismissedByTappingOutsideOfPopup="False"
-    x:Class="IMP_reseni.Controls.SpinnerPopup"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
-    <VerticalStackLayout>
-        <ActivityIndicator IsRunning="True" />
-        <Label Text="Loading..." />
+<mopups:PopupPage 
+             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:mopups="clr-namespace:Mopups.Pages;assembly=Mopups"
+             x:Class="IMP_reseni.Controls.SpinnerPopup"
+             Title="MyPopup"
+             BackgroundColor="Transparent"
+             CloseWhenBackgroundIsClicked="False">
+    <VerticalStackLayout WidthRequest="250" HeightRequest="250" VerticalOptions="CenterAndExpand" BackgroundColor="Blue">
+        <VerticalStackLayout>
+            <ActivityIndicator IsRunning="True" />
+            <Label Text="Loading..." />
+        </VerticalStackLayout>
     </VerticalStackLayout>
-</toolkit:Popup>
+</mopups:PopupPage>
